adjust sidebar  when resolution=320px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1251,6 +1251,10 @@ textarea.form-input::-webkit-resizer { display: none; }
   .sidebar {
     max-height: 150px;
   }
+
+  .info-content .title {
+    width: auto;
+  }
 }
 
 
